# library-mgmt-system

./: CMakeLists.txt  input.txt  license.cpp  license.h  license.ui  login.cpp  login.h  login.ui  main.cpp  mgmt.cpp  mgmt.h  mgmt.ui  pch.h  search.cpp  search.h  search.ui  store.cpp  store.h  store.ui  transact.cpp  transact.h  transact.ui
